# silk-opaleye

./: LICENSE  girella.cabal  silk-db-opaleye.cabal
example/: Example.hs  Main.hs
src/: Girella.hs
src/Girella/: Aggregation.hs  Combinators.hs  Compat.hs  Config.hs  Conv.hs  Json.hs  Misc.hs  Operators.hs  Order.hs  Query.hs  Range.hs  Run.hs  ShowConstant.hs  Transaction.hs
src/Girella/TH/: Column.hs  Table.hs  Util.hs
src/Girella/Transaction/: Q.hs
src/Silk/: Opaleye.hs
src/Silk/Opaleye/: Config.hs  Transaction.hs
