name:                girella
version:             1.0.0
synopsis:            Wrapper over Opaleye
description:         Wrapper over Opaleye
author:              Silk B.V.
maintainer:          code@silk.co
license:             BSD3
license-file:        LICENSE
copyright:           2014-2015 Silk B.V.
category:            Silk
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

executable example
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    example
  other-modules:     Example
  main-is:           Main.hs
  build-depends:
      base >= 4.6 && < 4.9
    , base-compat >= 0.8.2 && < 0.9
    , girella
    , mtl >= 2.0 && < 2.3
    , mtl-compat >= 0.1 && < 0.3
    , transformers >= 0.3 && < 0.5
    , transformers-compat >= 0.3 && < 0.5
    , uuid == 1.3.*

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Girella
    Girella.Aggregation
    Girella.Combinators
    Girella.Compat
    Girella.Config
    Girella.Conv
    Girella.Json
    Girella.Misc
    Girella.Operators
    Girella.Order
    Girella.Query
    Girella.Range
    Girella.Run
    Girella.ShowConstant
    Girella.TH
    Girella.TH.Column
    Girella.TH.Table
    Girella.Table
    Girella.To
    Girella.Transaction
  other-modules:
    Girella.Transaction.Q
    Girella.TH.Util
  build-depends:
      base >= 4.6 && < 4.9
    , aeson-utils >= 0.2 && < 0.4
    , base-compat >= 0.8.2 && < 0.9
    , case-insensitive == 1.2.*
    , contravariant >= 1.2 && < 1.4
    , hslogger >= 1.1 && < 1.3
    , mtl >= 2.0 && < 2.3
    , mtl-compat >= 0.1 && < 0.3
    , opaleye >= 0.3.1 && < 0.4
    , postgresql-simple >= 0.4.8 && < 0.5
    , product-profunctors >= 0.5 && < 0.7
    , profunctors >= 4.2 && < 5.2
    , resource-pool == 0.2.*
    , safe == 0.3.*
    , string-conversions > 0.3 && < 0.5
    , template-haskell >= 2.9 && < 2.11
    , time >= 1.4 && < 1.6
    , transformers >= 0.3 && < 0.5
    , transformers-compat >= 0.3 && < 0.5
    , uniplate == 1.6.*
    , uuid == 1.3.*
